...
  "otpEnterTitle": "We've sent a 6-digit OTP to your email",
  "otpEnterDescription": "You can enter the OTP here or click the button in the email.",
  "didNotReceiveOtp": "Didn't receive the OTP?",
  "tryAgainAfter": "You can send another login link after {} seconds.",
  "resendOtp": "Resend OTP",
  "menuHero": "Hero",
  "menuProfile": "Profile",
  "goodMorning": "Good Morning",
  "goodAfternoon": "Good Afternoon",
  "goodEvening": "Good Evening",
  "general": "General",
  "preferences": "Preferences",
  "dangerousZone": "Other",
...
  "darkMode": "Dark Mode",
  "termOfService": "Term of Service",
  "privacyPolicy": "Privacy Policy",
  "aboutUs": "About Us",
  "rateUs": "Rate Us",
  "reportAProblem": "Report a problem",
  "logOut": "Log out",
  "logOutTitle": "Log out confirmation",
  "logOutMessage": "Are you sure you want to log out?",
  "deleteAccount": "Delete account",
  "deleteAccountTitle": "Delete account confirmation",
  "deleteAccountMessage": "Are you sure you want to delete account?",
  "doNotHaveAccount": "New here?",
...
